<resources>
    <string name="app_name">社云通</string>
    <string name="action_settings">Settings</string>
    <string name="tab1_titlebar_tv">社云通</string>
    <string name="home_tv_titlebar">深圳电商协会</string>
    <string name="tab1">活动</string>
    <string name="tab2">资讯</string>
    <string name="tab3">更多</string>
    <string name="tab4">企业库</string>
    <string name="tab5">社区</string>
	<string name="tv_titlebar_tv">更多</string>
	<string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string-array name="tab1_name">
        <item>协会动态</item>
        <item>新闻资讯</item>
        <item>行业动态</item>
    </string-array>
    <string name="tvTitleBar4">登陆</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="down_fresh">下拉刷新</string>
    <string name="slip_fresh">松开刷新</string>
    <string name="freshing">正在刷新...</string>
    <string name="recent_fresh">最近更新:</string>
    <string name="weixin_switch">1</string>
    <string name="wx_app_id">wx11d4cfb5229b6a1a</string>
    <string name="app_download_url">http://szeca.hy.yunlai.cn/app</string>
    <string name="info">首页</string>
    <string name="trade">通讯录</string>
    <string name="store">单位</string>
    <string name="member">我</string>
    <string name="more">百宝箱</string>
    <string name="new_message">新消息</string>
    <string name="loading_tip">云端同步中...</string>
    <string name="maillist">通讯录</string>
    <string name="cat_text">分类</string>
    <string name="search">搜索</string>
    <string name="load_string">正在为您努力加载请稍后......</string>
    <string name="card">名片</string>
    <string name="my_card">我的名片夹</string>
    <string name="cantfav">不能收藏自己</string>
    <string name="cantmobile">不能给自己打电话</string>
    <string name="cantsendMsg">不能给自己留言</string>
    <string name="phone">电话</string>
    <string name="mobile">手机</string>
    <string name="fax">传真</string>
    <string name="addr">地址</string>
    <string name="leave_message">发个短信</string>
    <string name="member_name">会员姓名</string>
    <string name="member_post">会员职位</string>
    <string name="member_company">会员公司</string>
    <string name="store_index">单位</string>
    <string name="search_hint">搜索单位</string>
    <string name="store_detail">详情</string>
    <string name="about_us">简介</string>
    <string name="my_product">我的产品</string>
    <string name="my_trade">我的求购</string>
    <string name="load_more">查看更多</string>
    <string name="map_location">地理位置</string>
    <string name="store_all">全部</string>
    <string name="store_latest">最新加盟</string>
    <string name="know_app_url">http://mbsns.yunlai.cn/app/about</string>
    <string name="noapp_default">天哪！ TA还没有自己的企业app!</string>
    <string name="know_app_title">了解企业移动APP</string>
    <string name="loadapp_title">下载企业移动APP,更多精彩即刻体验！</string>
    <string name="read_original_text">阅读原文</string>
    <string name="firstCat">协会动态</string>
    <string name="AllInfo">全部</string>
    <string name="has_new_data">有新数据来了哦...</string>
    <string name="info_detail">详情</string>
    <string name="come_from">来源：</string>
    <string name="no_data_tip">暂无数据</string>
    <string name="newest_member">最新会员</string>
    <string name="no_content_now_favo">暂时未收藏任何内容哦！</string>
    <string name="no_card_now_favo">您暂时未收藏任何名片哦！</string>
    <string name="no_content_now_msgs">还没有人给您留言哦！</string>
    <string name="no_content_now">暂时还没有数据哦</string>
    <string name="no_card_now">无结果啊</string>
    <string name="no_content_now_msg">您还未跟TA打过招呼哦，快招呼一声！</string>
    <string name="no_content_now_comment">还没有人说什么哦，赶紧抢先第一个发言吧!</string>
    <string name="no_content_now_search">暂时还没有数据哦</string>
    <string name="newest_info">最新活动</string>
    <string name="search_index">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="search_product_store">搜索会员、单位</string>
    <string name="search_product">搜索会员</string>
    <string name="search_store">搜索单位</string>
    <string name="pls_input_content">请输入搜索内容</string>
    <string name="no_more">没有更多了</string>
    <string name="no_search_data_now">暂无搜索结果！</string>
    <string name="supply_text">供应</string>
    <string name="loading">正在加载...</string>
    <string name="wanted_text">求购</string>
    <string name="load_text">加载更多</string>
    <string name="company">公 司:</string>
    <string name="company_Tel">联系电话:</string>
    <string name="recom_product">推荐产品</string>
    <string name="newest_wanted">店家求购</string>
    <string name="no_new_more">没有更新的数据</string>
    <string name="for_return">求回复</string>
    <string name="send_critical">发表评论</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="member_login">登录</string>
    <string name="member_register_fast">快速注册新用户</string>
    <string name="member_register">注册新用户</string>
    <string name="member_exist">我有账号</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
    <string name="member_center">个人中心</string>
    <string name="my_at_center">我的活动</string>
    <string name="my_crcode">我的二维码</string>
    <string name="card_collect">名片夹</string>
    <string name="message_center">消息中心</string>
    <string name="store_collect">单位收藏</string>
    <string name="info_collect">资讯收藏</string>
    <string name="product_collect">产品收藏</string>
    <string name="alert_pwd">修改密码</string>
    <string name="other_way_login">————用以下方式登录————</string>
    <string name="kuai_pai">快拍一下</string>
    <string name="register_guide">        你好！欢迎使用社协云通，当前版本属于内部交流版，不对外开放注册，如果你想：</string>
    <string name="apply_member">申请加入会员</string>
    <string name="ask_help">寻求帮助</string>
    <string name="fast_apply">联系客服 快速申请</string>
    <string name="find_pwd">联系客服 找回密码</string>
    <string name="member_minisec">小秘书</string>
    <string name="member_alter_pwd">修改密码</string>
    <string name="have_done">完成</string>
    <string name="alter_success">密码修改成功</string>
    <string name="old_pwd_error">旧密码输入错误</string>
    <string name="alter_fail">密码修改失败</string>
    <string name="hint_old">请输入旧密码</string>
    <string name="hint_new">请输入新密码</string>
    <string name="send">发送</string>
    <string name="save_success">保存成功</string>
    <string name="for_us">关于我们</string>
    <string name="setting_weibo">微博设置</string>
    <string name="reaction">留言反馈</string>
    <string name="recom_soft">应用推荐</string>
    <string name="weibo_back">返回</string>
    <string name="XLweibo">新浪微博</string>
    <string name="tenxun">腾讯微博</string>
    <string name="detil">详情</string>
    <string name="hint_text">留下您的宝贵意见，我们将持续改进产品</string>
    <string name="limiting">一次只能提交140个字符</string>
    <string name="cannotnull">内容为空不能发送</string>
    <string name="logo">请先登录！</string>
    <string name="success">发送成功</string>
    <string name="faile">对不起！发送失败</string>
    <string name="reaction_default">欢迎您和客服小秘书联系。如果您在使用中有任何建议或问题，记得给我们留言哦!</string>
    <string name="XLSuccess">新浪微博绑定成功</string>
    <string name="TXSuccess">腾讯微博绑定成功</string>
    <string name="UXLSuccess">新浪微博绑定已解除</string>
    <string name="UTXSuccess">腾讯微博绑定已解除</string>
    <string name="failestring">对不起！服务器正忙</string>
    <string name="more_msg_hint">请输入您的反馈意见</string>
    <string name="comment_submit">我也说一句</string>
    <string name="pls_input_comment">请输入评论信息</string>
    <string name="input_count_out">输入字数超出限制</string>
    <string name="submit_succ">发送成功</string>
    <string name="submit_fail">发送失败</string>
    <string name="comment_publishing">发送中</string>
    <string name="share_list_title">分享</string>
    <string name="share_to_weixin_friend">分享到微信朋友圈</string>
    <string name="share_to_weixin_contacter">分享到微信好友</string>
    <string name="share_to_sina">分享到新浪微博</string>
    <string name="share_to_tencent">分享到腾讯微博</string>
    <string name="share_note">分享到手机用户</string>
    <string name="share_cancel">取消</string>
    <string name="share_success">微博分享成功</string>
    <string name="share_fail">微博分享失败</string>
    <string name="share_info">资讯</string>
    <string name="share_product">供应</string>
    <string name="share_trade">求购</string>
    <string name="share_store">商铺</string>
    <string name="map_init_error">地图初始化失败！请稍后再试</string>
    <string name="hello">Hello World, StartActivity!</string>
    <string name="serviceHotLineTitle">客服热线</string>
    <string name="serviceHotLineDesc">欢迎您的来电</string>
    <string name="businessTalkTitle">商务洽谈</string>
    <string name="businessTalkDesc">欢迎您的来电</string>
    <string name="sendEmailTitle">发送邮件</string>
    <string name="sendEmailDesc">欢迎您的来信</string>
    <string name="ringUp">打电话</string>
    <string name="sendSms">发短信</string>
    <string name="showLocation">显示位置</string>
    <string name="sendEmail">发邮件</string>
    <string name="member_reg">会员注册</string>
    <string name="member_reg_desc">在线快速免费注册成为我们的会员，享受电子优惠券和官方活动通知等服务，更可与其他会员在线交流</string>
    <string name="feedback_online">在线反馈</string>
    <string name="feedback_online_desc">在线提交您的意见和建议，24小时内给您答复，欢迎反馈</string>
    <string name="invite_friend">邀请好友</string>
    <string name="invite_friend_desc">邀请您的手机通讯录联系人下载使用本软件</string>
    <string name="weibo_bind">微博绑定</string>
    <string name="weibo_bind_desc">请根据您要分享的平台，自定义授权；如果需要更换分享账户，可注销进行重新授权！</string>
    <string name="weibo_oauth_desc">请根据您要分享的平台，自定义授权；如果需要更换分享账户，可注销进行重新授权！</string>
    <string name="concacter">联系人：</string>
    <string name="contact_number">联系电话：</string>
    <string name="fax_number">传真号码：</string>
    <string name="company_address">公司地址：</string>
    <string name="cqr_share">二维码分享</string>
    <string name="cqr_desc">二维码</string>
    <string name="searchLabel">searchLabel</string>
    <string name="searchHint">searchHint</string>
    <string name="searchUrl">http://yy.3g.cn/</string>
    <string name="shareImgContent">图片详细界面分享内容的文字</string>
    <string name="hp_camera">相机拍照</string>
    <string name="hp_album">手机相册</string>
    <string name="hp_cancel">取消</string>
    <string name="delete_success">删除成功！</string>
    <string name="fans_wall">粉丝墙</string>
    <string name="fans_wall_desc">客户评论集中展示</string>
    <string name="weibo_same">同时转发到微博</string>
    <string name="say_something">说点什么吧...</string>
    <string name="comment_success">评论成功</string>
    <string name="sync_fail">评论成功但同步到微博失败</string>
    <string name="comment_fail">评论失败</string>
    <string name="clean_words">清除文字</string>
    <string name="notice">注意</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="comment">30</string>
    <string name="will_not_save">返回文本框内容将不会被保存</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="comment_list_no_data_tip">还没有人说什么哦，赶紧抢先第一个发言吧！</string>
    <string name="no_new_data">没有新数据</string>
    <string name="reply_fail">评论失败</string>
    <string name="can_not_publish_comment">您的账号已经被屏蔽，不能发表评论</string>
    <string name="regist_tv_tab4">注册</string>
    <string name="tv_login_tab4">登陆</string>
    <string name="hint_tab4_login_phone">请输入您的手机号码</string>
    <string name="hint_tab4_login_pwd">6-20个英文字母或数字</string>
    <string name="title_sendpost_tv">标题:</string>
    <string name="tv_more_content">内容</string>
    <string name="hint_please_input_content">请输入内容</string>
    <string name="tv_pic_more1">照片:</string>
    <string name="tv_send_post2">发帖</string>
    <string name="tv_tab2_pop_tv1">我要签到</string>
    <string name="tv_tab2_pop_tv2">我要直播</string>
    <string name="tv_tab2_pop_tv3">直播现场</string>
    <string name="tv_tab2_pop_tv6">往期活动</string>
    <string name="tv_tab2_pop_tv5">即将开始</string>
</resources>