<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/card_bg2"
            android:orientation="vertical"
            android:paddingLeft="25.0dip"
            android:paddingRight="25.0dip"
            android:paddingTop="36.0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:lineSpacingExtra="3.0dip"
                android:text="@string/register_guide"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="20.0dip"
                android:paddingLeft="15.0dip"
                android:text="@string/apply_member"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/apply_by_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/phone_hook"
                android:gravity="center_vertical"
                android:paddingLeft="30.0dip"
                android:text="@string/fast_apply"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5.0dip"
                android:layout_marginTop="15.0dip"
                android:paddingLeft="15.0dip"
                android:text="@string/ask_help"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/find_pwd_by_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/phone_hook"
                android:gravity="center_vertical"
                android:paddingLeft="30.0dip"
                android:text="@string/find_pwd"
                android:textColor="@color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/register_guide_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backButton"
            android:layout_alignParentRight="true"
            android:src="@drawable/btn09_btn05_selector" />
    </RelativeLayout>

</FrameLayout>